--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+# Serveur et Environnement
 Flask==3.1.2
 gunicorn==23.0.0
+werkzeug==3.1.3
+
+# Conversion Documents (Aspose - Puissant pour PPTX, PDF, Word)
 aspose-words==25.1.0
 aspose-slides==25.1.0
 aspose-pdf==25.1.0
+
+# Conversion PDF & Images
 pdf2docx==0.5.8
 img2pdf==0.6.3
 xhtml2pdf==0.2.17
 Pillow==12.1.0
+
+# Génération de PDF (pour l'outil Motivation)
+fpdf==1.7.2
+
