--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,11 @@ pdf2docx==0.5.8
 img2pdf==0.6.3
 xhtml2pdf==0.2.17
 Pillow==12.1.0
+striprtf==0.0.26
+
 
 # Génération de PDF (pour l'outil Motivation)
 fpdf==1.7.2
+
 
 
