--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ gunicorn==23.0.0
 werkzeug==3.1.3
 
 # Conversion Documents (Aspose - Puissant pour PPTX, PDF, Word)
-aspose-words==25.1.0
-aspose-pdf==25.1.0
-aspose-slides==25.1.0
+pdf2docx==0.5.8
+pdf2image==1.17.0
+Pillow==12.1.0
 
 # Conversion PDF & Images
 pdf2docx==0.5.8
@@ -18,6 +18,7 @@ striprtf==0.0.26
 
 # Génération de PDF (pour l'outil Motivation)
 fpdf==1.7.2
+
 
 
 
