--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
-# Serveur et Environnement
 Flask==3.1.2
 gunicorn==23.0.0
 werkzeug==3.1.3
-
-# Conversion Documents (Aspose - Puissant pour PPTX, PDF, Word)
+img2pdf==0.6.3
 pdf2docx==0.5.8
+pymupdf==1.25.1
+python-docx==1.1.2
 pdf2image==1.17.0
 Pillow==12.1.0
-
-# Conversion PDF & Images
-pdf2docx==0.5.8
-img2pdf==0.6.3
 xhtml2pdf==0.2.17
-Pillow==12.1.0
 striprtf==0.0.26
-
-
-# Génération de PDF (pour l'outil Motivation)
 fpdf==1.7.2
+
+
+
 
 
 
